syntax = "proto3";

option go_package = "./;student";

package student;

message StudentInfo {
    int32 carnet = 1;
    string nombre = 2;
    string curso = 3;
    int32 nota = 4;
    string semestre = 5;
    int32 year = 6;
}

service StudentService {
    rpc SaveStudentInfo (StudentInfo) returns (replyInfo){};
}
message replyInfo {
  string info = 1;
}